[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemies/chaser/Chaser.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/circle.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/rectangle.png" type="Texture" id=3]
[ext_resource path="res://scenes/GUI elements/healthbar/Healthbar.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[node name="Chaser" type="KinematicBody2D"]
z_index = 2
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 9.53674e-07 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.537255, 0.529412, 0.529412, 1 )
show_behind_parent = true
position = Vector2( 0, -33.3333 )
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.537255, 0.529412, 0.529412, 1 )
show_behind_parent = true
position = Vector2( 2.27374e-13, 33.3333 )
rotation = 3.14159
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.537255, 0.529412, 0.529412, 1 )
show_behind_parent = true
position = Vector2( 33.3333, -3.8147e-06 )
rotation = 1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.537255, 0.529412, 0.529412, 1 )
show_behind_parent = true
position = Vector2( -33.3333, -3.8147e-06 )
rotation = -1.5708
z_index = 2
z_as_relative = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.38419e-07, 2.38419e-07 )
scale = Vector2( 0.4, 0.4 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 10
z_as_relative = false

[node name="Healthbar" parent="Node2D" instance=ExtResource( 4 )]
margin_left = -32.0
margin_top = -48.0
margin_right = 32.0
margin_bottom = -32.0

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_Hurtbox_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
